============================ Rework-22 ==================================
2010-09-26  Holger Vogt
 * .cvsignore: m4 entry removed

2010-09-25  Holger Vogt
 * conf.c, conf.h, ngspice.h, visualc/config.h, configure.ac:
   update welcome message, version 22
 * FAQ, COPYING, NEWS, INSTALL, README, README.tcl, BUGS: 
   update to version 22  
 * examples/Monte_Carlo: new folder with example files

2010-09-23  Robert Larice
 * Makefile.am ,
 * m4/.cvsignore :
    add an empty m4/.cvsignore file, to make sure the directory exists
    add this directory and the file compile_min.sh to the tarball

2010-09-22 Dietmar Warning
 * devices/mesa/mesaload.c: initialize some variables

2010-09-21  Robert Larice
 * autogen.sh :
    there are several implementations of `sed'.
    Some can't swallow a '\n' escape sequence on the RHS.
    And some want a plain newline in the RHS to be escaped.
    see http://sed.sourceforge.net/sedfaq4.html#s4.1
     `4.1. How do I insert a newline into the RHS of a substitution?'

2010-09-19 Dietmar Warning
 * adms/hicum2/admsva/hicum2.va: update to version 2.24 with small exceptions
   from the original source code, seems the last update because model provider
   has limited the access only to authorized partners

2010-09-19  Robert Larice
 * autogen.sh :
    cleanup

2010-09-19  Robert Larice
 * src/frontend/plotting/graf.c ,
 * src/frontend/plotting/grid.c :
    fix some ancient \n\r and \r\n typos

2010-09-19  Robert Larice
 * src/frontend/quote.c :
    cp_unqoute(), avoid segfault when applied to a single quote "\""
    testcase:
      .control
      echo "--"
      .endc
    FIXME, still not completely done,
      inp_stripcomments_line()
    will fail on comments inside of strings

2010-09-19 Holger Vogt
 * src/spinit.in, configure.ac: allow lib64 in spinit (bug no. 3054424)
   if libdir contains lib64
 * compile_min.sh: new script for compiling MINGW 32 and 64 bit

2010-09-18 Holger Vogt