@@ -6,7 +6,7 @@ EXTRA_DIST = ifs_lex.l mod_lex.l ifs_yacc.h mod_yacc.h
 
 MAINTAINERCLEANFILES = Makefile.in
 
-LEX = @LEX@ -t
+LEX = flex
 BISON = bison
 
 bin_PROGRAMS = cmpp
@@ -17,11 +17,11 @@ cmpp_SOURCES = cmpp.h main.c pp_ifs.c pp_lst.c pp_mod.c read_ifs.c util.c \
 
 mod_lex.o : mod_yacc.h
 mod_lex.c : mod_lex.l
-	$(LEX)  -Pmod_yy $< > $@
+	$(LEX)  -o $@  $<
 
 ifs_lex.o : ifs_yacc.h
 ifs_lex.c : ifs_lex.l
-	$(LEX)  -i -Pifs_yy $< > $@
+	$(LEX)  -o $@  $<
 
 ifs_yacc.c ifs_yacc.h : ifs_yacc.y
 	$(BISON) $(BISONFLAGS) -d -o ifs_yacc.c $<
