@@ -1,3 +1,4 @@
+%option prefix="mod_yy"
 %option yylineno
 %option noyywrap
 %{ /* $Id$ */
